--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,18 @@
     <link href="/static/css/tablesorter/blue/style.css" rel="stylesheet"/>
     <style type="text/css">
         body {
-          padding-top: 50px;
-          padding-bottom: 20px;
+            padding-top: 50px;
+            padding-bottom: 20px;
+        }
+        .form-control{
+            display: inline;
+            width: 95%;
+        }
+        .total_label{
+            margin-right: 100px;
+        }
+        .red_tr td{
+            color: red;
         }
     </style>
 
@@ -38,13 +48,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">XX市场账目统计</a>
+          <a class="navbar-brand" href="/#add_form">XX市场账目统计</a>
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form"  style="display:none">
@@ -86,7 +90,7 @@
             </thead>
             <tbody>
                 {% for r in rs %}
-                    <tr data-id="{{ r.id }}">
+                    <tr data-id="{{ r.id }}" class="{% if r.status == '未支付' %}red_tr{% endif %}">
                         <td>{{ r.name }}</td>
                         <td>{{ r.mao }}</td>
                         <td>{{ r.pi }}</td>
@@ -95,10 +99,10 @@
                         <td>{{ r.showtime }}</td>
                         <td>{{ r.status }}</td>
                         <td>
-                            <a href="/pay/?id={{ r.id }}" class="btn btn-mini btn-primary">支付</a>
-                            <a href="/unpaid/?id={{ r.id }}" class="btn btn-mini btn-primary">未付</a>
+                            <a href="/pay/?id={{ r.id }}" class="btn btn-xs btn-success">支付</a>
+                            <a href="/unpaid/?id={{ r.id }}" class="btn btn-xs btn-warning">未付</a>
 
-                            <a href="/del_account/?id={{ r.id }}" onclick="return confirm('确定要删除？')" class="btn btn-mini btn-danger">删除</a>
+                            <a href="/del_account/?id={{ r.id }}" onclick="return confirm('确定要删除？')" class="btn btn-xs btn-danger">删除</a>
 
                         </td>
                     </tr>
@@ -106,31 +110,67 @@
             </tbody>
         </table>
 
+        <label class="total_label">
+            总毛重：{{ total_mao }}
+        </label>
+        <label class="total_label">
+            总皮重：{{ total_pi }}
+        </label>
+        <label class="total_label">
+            总净重：{{ total_jing }}
+        </label>
+        <label class="total_label">
+            总金额：{{ total_money }}
+        </label>
+
         <hr>
 
 
-
-        <form action="/add_account/">
-            <label>添加新纪录</label>
+        <label onclick="$('#filter_form').toggle()" style="cursor: pointer">筛选记录</label>
+        <form action="/" id="filter_form">
             <div class="form-group">
+                姓名:
+                <input type="text" class="form-control" placeholder="姓名" name="filter_name" value="{{ filter_name }}"/>
+            </div>
+            <div class="form-group">
+                日期:
+                <input type="text" class="form-control" placeholder="2014-01-01 {{ nowtime }}" name="filter_time" value="{{ filter_time }}"/>
+            </div>
+            <input type="submit" class="btn btn-primary" value="筛选" />
+        </form>
+
+
+
+        <hr>
+
+
+        <label onclick="$('#add_form').toggle()" style="cursor: pointer">添加新纪录</label>
+        <form action="/add_account/" id="add_form">
+            <div class="form-group">
+                姓名:
                 <input type="text" class="form-control" placeholder="姓名" name="name" />
             </div>
             <div class="form-group">
+                毛重:
                 <input type="text" class="form-control" placeholder="毛重" name="mao" />
             </div>
             <div class="form-group">
+                皮重:
                 <input type="text" class="form-control" placeholder="皮重" name="pi" />
             </div>
             <div class="form-group">
+                净重:
                 <input type="text" class="form-control" placeholder="净重" name="jing" />
             </div>
             <div class="form-group">
+                金额:
                 <input type="text" class="form-control" placeholder="金额" name="money" />
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="日期 ( {{ nowtime }} )" name="time" />
+                日期:
+                <input type="text" class="form-control" placeholder="{{ nowtime }}" name="time" />
             </div>
-            <input type="submit" class="btn" value="添加" />
+            <input type="submit" class="btn btn-primary" value="添加" />
         </form>
 
 
