--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,12 @@
         .red_tr td{
             color: red;
         }
+        .blue_tr td{
+            color: blue;
+        }
+        #for_print{
+            cursor: pointer;
+        }
     </style>
 
 
@@ -38,6 +44,11 @@
             $(".tablesorter").tablesorter({
                 widgets: ['zebra']
             })
+
+            $("#for_print").click(function(){
+                $(".operating").toggle()
+                $(".btn-xs").toggle()
+            })
         })
     </script>
 
@@ -48,7 +59,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/#add_form">XX市场账目统计</a>
+          <a class="navbar-brand" href="#add_form">XX市场账目统计</a>
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form"  style="display:none">
@@ -85,12 +96,12 @@
                     <th>金额</th>
                     <th>日期</th>
                     <th>状态</th>
-                    <th>操作</th>
+                    <th class="operating">操作</th>
                 </tr>
             </thead>
             <tbody>
                 {% for r in rs %}
-                    <tr data-id="{{ r.id }}" class="{% if r.status == '未支付' %}red_tr{% endif %}">
+                    <tr data-id="{{ r.id }}" class="{% if r.status == '未支付' %}red_tr{% else %}blue_tr{% endif %}">
                         <td>{{ r.name }}</td>
                         <td>{{ r.mao }}</td>
                         <td>{{ r.pi }}</td>
@@ -99,10 +110,10 @@
                         <td>{{ r.showtime }}</td>
                         <td>{{ r.status }}</td>
                         <td>
-                            <a href="/pay/?id={{ r.id }}" class="btn btn-xs btn-success">支付</a>
-                            <a href="/unpaid/?id={{ r.id }}" class="btn btn-xs btn-warning">未付</a>
+                            <a href="/pay/?id={{ r.id }}" class="btn btn-xs btn-primary">支付</a>
+                            <a href="/unpaid/?id={{ r.id }}" class="btn btn-xs btn-danger">未付</a>
 
-                            <a href="/del_account/?id={{ r.id }}" onclick="return confirm('确定要删除？')" class="btn btn-xs btn-danger">删除</a>
+                            <a href="/del_account/?id={{ r.id }}" onclick="return confirm('确定要删除？')" class="btn btn-xs btn-warning">删除</a>
 
                         </td>
                     </tr>
@@ -123,63 +134,64 @@
             总金额：{{ total_money }}
         </label>
 
-        <hr>
+
+        <div class="operating">
+
+            <hr>
+
+            <label onclick="$('#filter_form').toggle()" style="cursor: pointer">筛选账目 </label>
+            <form action="/" id="filter_form">
+                <div class="form-group">
+                    姓名:
+                    <input type="text" class="form-control" placeholder="姓名" name="filter_name" value="{{ filter_name }}"/>
+                </div>
+                <div class="form-group">
+                    日期:
+                    <input type="text" class="form-control" placeholder="2014-01-01 {{ nowtime }}" name="filter_time" value="{{ filter_time }}"/>
+                </div>
+                <input type="submit" class="btn btn-primary" value="筛选" />
+            </form>
+
+            <hr>
+
+            <label onclick="$('#add_form').toggle()" style="cursor: pointer">添加新账目</label>
+            <form action="/add_account/" id="add_form">
+                <div class="form-group">
+                    姓名:
+                    <input type="text" class="form-control" placeholder="姓名" name="name" />
+                </div>
+                <div class="form-group">
+                    毛重:
+                    <input type="text" class="form-control" placeholder="毛重" name="mao" />
+                </div>
+                <div class="form-group">
+                    皮重:
+                    <input type="text" class="form-control" placeholder="皮重" name="pi" />
+                </div>
+                <div class="form-group">
+                    净重:
+                    <input type="text" class="form-control" placeholder="净重" name="jing" />
+                </div>
+                <div class="form-group">
+                    金额:
+                    <input type="text" class="form-control" placeholder="金额" name="money" />
+                </div>
+                <div class="form-group">
+                    日期:
+                    <input type="text" class="form-control" placeholder="{{ nowtime }}" name="time" />
+                </div>
+                <input type="submit" class="btn btn-primary" value="添加" />
+            </form>
 
 
-        <label onclick="$('#filter_form').toggle()" style="cursor: pointer">筛选记录</label>
-        <form action="/" id="filter_form">
-            <div class="form-group">
-                姓名:
-                <input type="text" class="form-control" placeholder="姓名" name="filter_name" value="{{ filter_name }}"/>
-            </div>
-            <div class="form-group">
-                日期:
-                <input type="text" class="form-control" placeholder="2014-01-01 {{ nowtime }}" name="filter_time" value="{{ filter_time }}"/>
-            </div>
-            <input type="submit" class="btn btn-primary" value="筛选" />
-        </form>
-
-
-
-        <hr>
-
-
-        <label onclick="$('#add_form').toggle()" style="cursor: pointer">添加新纪录</label>
-        <form action="/add_account/" id="add_form">
-            <div class="form-group">
-                姓名:
-                <input type="text" class="form-control" placeholder="姓名" name="name" />
-            </div>
-            <div class="form-group">
-                毛重:
-                <input type="text" class="form-control" placeholder="毛重" name="mao" />
-            </div>
-            <div class="form-group">
-                皮重:
-                <input type="text" class="form-control" placeholder="皮重" name="pi" />
-            </div>
-            <div class="form-group">
-                净重:
-                <input type="text" class="form-control" placeholder="净重" name="jing" />
-            </div>
-            <div class="form-group">
-                金额:
-                <input type="text" class="form-control" placeholder="金额" name="money" />
-            </div>
-            <div class="form-group">
-                日期:
-                <input type="text" class="form-control" placeholder="{{ nowtime }}" name="time" />
-            </div>
-            <input type="submit" class="btn btn-primary" value="添加" />
-        </form>
-
+        </div>
 
 
         <hr>
 
 
       <footer>
-        <p>&copy; Accounting 2014</p>
+        <p id="for_print">&copy; Accounting 2014  注：该版本为测试版，姓名将只保留第一个字符</p>
       </footer>
     </div> <!-- /container -->
 
