--- a/templates/index.html
+++ b/templates/index.html
@@ -155,10 +155,16 @@
             <hr>
 
             <label onclick="$('#add_form').toggle()" style="cursor: pointer">添加新账目</label>
+                <a class="btn btn-success btn-xs" onclick="$('#namelist').toggle()">选择输入过的姓名</a>
             <form action="/add_account/" id="add_form">
+                <div id="namelist" style="display:none; margin-top:20px; margin-bottom:20px;">
+                    {% for name in namelist %}
+                        <a class="btn btn-xs btn-primary    " onclick="$('#name').val('{{ name }}')">{{ name }}</a>
+                    {% endfor %}
+                </div>
                 <div class="form-group">
                     姓名:
-                    <input type="text" class="form-control" placeholder="姓名" name="name" />
+                    <input type="text" class="form-control" placeholder="姓名" name="name" id="name"/>
                 </div>
                 <div class="form-group">
                     毛重:
