--- a/templates/index.html
+++ b/templates/index.html
@@ -197,7 +197,7 @@
 
 
       <footer>
-        <p id="for_print">&copy; Accounting 2014  注：该版本为测试版，姓名将只保留第一个字符</p>
+        <p id="for_print">&copy; Accounting 2014</p>
       </footer>
     </div> <!-- /container -->
 
